<resources>
    <string name="app_name">DistanceAlert</string>
    <string name="connection">Connessione…</string>
    <string name="distance_measured_is">Distanza rilevata in metri: </string>
    <string name="alarm_toast">Attenzione! Distanza superata!</string>
    <string name="alarm_off">Spegni allarme</string>
    <string name="connected_to">Connesso a modulo: </string>
    <string name="selectModule">Seleziona un modulo dalla lista.</string>
    <string name="noConnection">Nessuna connessione.</string>
    <string name="noData">Nessuna misurazione rilevata.</string>
    <string name="noDwm">Problemi di comunicazione con la periferica DWM.</string>
    <string name="noId">Nessun ID rilevato.</string>
    <string name="max_distance_is">Allerta superata distanza:</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="physical_button_problem">Problema riguardo il bottone fisico rilevato.</string>
    <string name="uart">UART</string>
    <string name="spi">SPI</string>
</resources>
